--- a/css/login.css
+++ b/css/login.css
@@ -1,8 +1,12 @@
 a {
   cursor: pointer;
+    outline: none;
+    border: 0;
+}
+input{
+  outline: none;
 }
 a {
-  color: #9acd91;
   text-decoration: none;
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
@@ -94,9 +98,6 @@ body{
 		padding-left:15px;
 		padding-right:15px;
 	}
-
-
-
 
 /*login form starts here*/
 .login-section{
