--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -20,7 +20,7 @@
   padding: 0 75px;
 }
 .header-row-5co a{
-  font-family: 'Didact Gothic', sans-serif;
+  font-family: 'Roboto', sans-serif;
   color: #DADFD3 ;
   font-size: 16px;
 }
@@ -76,11 +76,12 @@
   margin-left: 3px;
   transition: all 0.5s cubic-bezier(.25,.8,.25,1);
   background: transparent;
+  cursor: pointer;
   border-left:3px solid #1e2931;
 }
 .left-list h3{
   /*font-family: 'Dosis', sans-serif;*/
-  font-family: 'Didact Gothic', sans-serif;
+  font-family: 'Roboto', sans-serif;
   color: #9c9c9c;
   margin: 0;
   font-weight: 300;
@@ -143,13 +144,16 @@
 .result-wrapper{
   margin: 50px 50px 0px 50px;
 }
+.result-wrapper .bottom{
+  cursor: pointer;
+}
 .result-card{
   box-shadow: 9px 7px 40px -6px rgba(0, 0, 0, 0.75);
-  width: 220px;
+  width: 180px;
   padding: 0px;
-  height: 310px;
-  min-height: 300px;
+  height: 253px;
   background: #fff;
+  cursor: pointer;
   position: relative;
 }
 .result-card img{
@@ -159,7 +163,7 @@
 .result-card .rating{
   position: relative;
   top: -80px;
-  left: 200;
+  left: 160;
   z-index: 10;
   height: 40px;
   width: 40px;
@@ -174,21 +178,23 @@
   font-weight: 600;
 }
 .result-wrapper p, .result-wrapper span, .result-wrapper h3{
-  font-family: 'Didact Gothic', sans-serif;
+  font-family: 'Roboto', sans-serif;
   color: #dedede;
 }
 .text-wrapper{
-  width: 220px;
+  width: 180px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  margin: 20px 0 5px;
 }
 .text-wrapper h3{
       color: #fff;
   font-weight: 300;
   text-overflow: ellipsis;
   overflow: hidden;
+  margin: 0;
 }
-.result-card .bootom p{
+.result-card .bottom p{
   font-family: 'Open Sans Condensed', sans-serif;
 }
