--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -66,7 +66,6 @@
   z-index: 5;
   height: 100vh;
   top:0px;
-  box-shadow: 9px 7px 10px -6px rgba(0, 0, 0, 0.25);
   /*margin-top: 50px;*/
   position: absolute;
 }
@@ -79,6 +78,18 @@
 .user-info a{
   color: #fff;
   opacity: 0.89;
+}
+.slide-in-wrapper{
+  opacity: 1;
+  position: relative;
+  transition: all ease-in 15s;
+  top: 0;
+}
+.slide-out-wrapper{
+  opacity: 0;
+  position: relative;
+  transition: all ease-in 15s;
+  top: 100vh;
 }
 .left .left-list{
   padding: 13px 0 13px 37px;
@@ -112,10 +123,10 @@
   height: 50px;
   background-color: #2c3c46;
 }
-.ti-icons{
-  margin: 25px auto;
+.ti-search{
   font-size: 26px;
-  color: #757D8E ;
+  color: #939598;
+  font-weight: 600;
 }
 .chat-layout-wrapper .center{
   background: #F7FAFD;
@@ -157,13 +168,18 @@
   cursor: pointer;
 }
 .result-card{
-  box-shadow: 9px 7px 40px -6px rgba(0, 0, 0, 0.75);
   width: 180px;
   padding: 0px;
   height: 253px;
-  background: #fff;
+  background-image: url('../images/user.svg');
+  background-size: 100% 100%;
   cursor: pointer;
   position: relative;
+  transition: all 1s cubic-bezier(.25,.8,.25,1);
+}
+.result-card:hover{
+  box-shadow: 9px 7px 40px -6px rgba(0, 0, 0, 0.75);
+  transition: all 1s cubic-bezier(.25,.8,.25,1);
 }
 .result-card img{
   height:100%;
@@ -186,9 +202,17 @@
   padding-top: 11px;
   font-weight: 600;
 }
-.result-wrapper p, .result-wrapper span, .result-wrapper h3{
+.result-wrapper p, .result-wrapper span, .result-wrapper h3, .header-row-5co label{
   font-family: 'Source Sans Pro', sans-serif;
   color: #dedede;
+}
+.search-input{
+  font-family: 'Source Sans Pro', sans-serif;
+}
+.search-input input{
+  font-weight: 500;
+  font-size: 18px;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 .text-wrapper{
   width: 180px;
@@ -206,4 +230,11 @@
 }
 .result-card .bottom p{
   font-family: 'Open Sans Condensed', sans-serif;
+}
+.sign-out{
+  background: white;
+  border: 2px solid white;
+  color: black;
+  box-shadow: 9px 7px 40px -6px rgba(0, 0, 0,1);
+
 }
