--- a/css/a_login.css
+++ b/css/a_login.css
@@ -105,14 +105,14 @@ body{
   width: 100%;
 }
 .login-form-wrapper{
-  height: 500px;
+  height: 550px;
   width: 1000px;
 }
 .login-form-wrapper .left{
   background: #F1F3F7;
   width: 40%;
   left: 0;
-  height: 500px;
+  height: 550px;
   position: relative;
   box-shadow: 0 0 25px 0 rgba(0, 0, 0, .18);
   transition: all 1s cubic-bezier(.25,.8,.25,1);
@@ -153,7 +153,7 @@ body{
   padding: 16px;
 }
 .log-in{
-  height:200px;
+  height:150px;
 }
 .log-in h2, .sign-up h2{
   letter-spacing: 1px;
@@ -197,10 +197,31 @@ body{
 /* -webkit-animation: over 6s infinite; */
 }
 .forget-txt{
-  padding: 16px;
+  padding: 30px 16px;
   margin: auto;
   color: #9A9DA7 ;
   font-family: 'Roboto Mono', monospace;
+}
+.ti-signup{
+font-size: 24px;
+color: #adadad;
+}
+.ti-login-icon{
+  font-size: 24px;
+  color: #fff;
+  height: 28px;
+  width: 28px;
+  padding: 16px;
+  position: relative;
+  top: 7px;
+}
+.password-show{
+  opacity: 1;
+  transition: all 1.5s cubic-bezier(.25,.8,.25,1);
+}
+.password-hide{
+  opacity: 0;
+  transition: all 0.5s cubic-bezier(.25,.8,.25,1);
 }
 .sign-up-wrapper{
   padding: 30px;
