--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -4,6 +4,7 @@
 }
 .navbar-wrap {
   height: 70px;
+  top: 0;
   width: 100%;
   position: fixed;
   z-index:20;
@@ -17,11 +18,6 @@
 .header-row-5co{
   z-index: 20;
   padding: 0 75px;
-}
-.header-row-5co a{
-  font-family: 'Source Sans Pro', sans-serif;
-  color: #DADFD3 ;
-  font-size: 16px;
 }
 .nav-li-items div {
     padding: 0px 25px 0px 15px;
@@ -38,7 +34,7 @@
   text-shadow: 2px 2px 1px rgba(0, 0, 0, 0.08);
 }
 .chat-section{
-  background-color: #313E4E;
+  background-color: #fff;
   height:100vh;
 }
 .fixed, .fluid{
@@ -59,21 +55,23 @@
   height: 100%;
   /*background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);*/
   box-shadow: 9px 7px 40px -6px rgba(0, 0, 0, 0.25);
-  background: linear-gradient(90deg, #1e2931 0%, #384c59 75%);
+  /*background: linear-gradient(90deg, #1e2931 0%, #384c59 75%);*/
 }
 .chat-layout-wrapper .left{
   width: 250px;
   z-index: 5;
   height: 100vh;
   top:0px;
+  box-shadow: 0 38px 43px rgba(0,0,0,.09);
   /*margin-top: 50px;*/
   position: absolute;
 }
 .user-info{
   height: 100px;
   padding: 16px;
-  background: #C7433B ;
-  font-family: 'Source Sans Pro', sans-serif;
+  /*background: #C7433B ;*/
+  background:  linear-gradient(90deg, #ec6e82, #fca13e);
+  font-family: 'Varela Round', sans-serif;
 }
 .user-info img{
   border-radius: 50%;
@@ -100,27 +98,29 @@
 }
 .left .left-list{
   padding: 13px 0 13px 37px;
-  margin-left: 3px;
+  /*margin-left: 3px;*/
   transition: all 0.5s cubic-bezier(.25,.8,.25,1);
   background: transparent;
   cursor: pointer;
-  border-left:3px solid #1e2931;
+  /*border-left:3px solid #1e2931;*/
 }
 .left-list h3{
   /*font-family: 'Dosis', sans-serif;*/
-  font-family: 'Source Sans Pro', sans-serif;
-  color: #9c9c9c;
+  font-family: 'Varela Round', sans-serif;
+  color: #5a5a5a;
   margin: 0;
   font-weight: 300;
   font-size:16px;
 }
 .left .left-list:hover{
-  background-color: #2c3c46;
+  /*background:  linear-gradient(90deg, #ec6e82, #fca13e);*/
+
+  background-color:#d6d5d5;
   transition: all 0.5s cubic-bezier(.25,.8,.25,1);
-  border-left: 3px solid #C7433B;
+  /*border-left: 3px solid #C7433B;*/
 }
 .left .left-list:hover > h3{
-  color: #ffffff;
+  color: #5a5a5a;
 }
 .left .abs-bottom{
   padding-top: 40px;
@@ -128,7 +128,6 @@
   bottom: 0;
   width: 100%;
   height: 50px;
-  background-color: #2c3c46;
 }
 .ti-search{
   font-size: 26px;
@@ -210,16 +209,30 @@
   font-weight: 600;
 }
 .result-wrapper p, .result-wrapper span, .result-wrapper h3, .header-row-5co label{
-  font-family: 'Source Sans Pro', sans-serif;
   color: #dedede;
 }
+.result-wrapper h3{
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
+  color: #373c46;
+  line-height: initial;
+}
+.result-wrapper span{
+  font-family: 'Open Sans', sans-serif;
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+  line-height: 27px;
+  color: #9da6b8;
+  font-weight: 300;
+}
 .search-input{
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Varela Round', sans-serif;
 }
 .search-input input{
   font-weight: 500;
   font-size: 18px;
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Varela Round', sans-serif;
 }
 .text-wrapper{
   width: 180px;
@@ -229,11 +242,11 @@
   margin: 20px 0 5px;
 }
 .text-wrapper h3{
-      color: #fff;
-  font-weight: 300;
-  text-overflow: ellipsis;
-  overflow: hidden;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
   margin: 0;
+  color: #373c46;
+  line-height: initial;
 }
 .result-card .bottom p{
   font-family: 'Open Sans Condensed', sans-serif;
@@ -243,5 +256,63 @@
   border: 2px solid white;
   color: black;
   box-shadow: 9px 7px 40px -6px rgba(0, 0, 0,1);
+}
 
+/*new css*/
+.search-btn{
+  font-family: 'Montserrat', sans-serif;
+  transition: all 0.5s;
+  text-align: center;
+  border: none;
+  width: 120px;
+  height: 40px;
+  color: #fff;
+  border-radius: 50px;
+  background: linear-gradient(90deg, #ec6e82, #fca13e);
+  /*font-weight: bold;*/
+  cursor: pointer;
+  box-shadow: 0 3px 15px 0 rgba(0,0,0,.25);
+  margin: 14px;
+}
+.search-btn.logout-btn{
+  margin: auto;
+}
+.search-btn:hover{
+  box-shadow: 9px 7px 40px -6px rgba(0, 0, 0,1);
+}
+.search-btn p{
+  position: relative;
+  top: -5px;
+}
+
+@media screen and (max-width: 960px) {
+  .chat-layout-wrapper .left{
+    width: 0px;
+    z-index: 5;
+    height:0px;
+    top:-20px;
+    box-shadow: none;
+    display: block;
+    /*margin-top: 50px;*/
+    position: relative;
+  }
+
+  .chat-layout-wrapper .right{
+    /*background: #2D3840 ;*/
+    position: relative;
+    top: 70px;
+    left:0px;
+    margin-right:0px;
+    padding-bottom: 150px;
+    overflow: auto;
+    padding-right: 16px;
+  }
+}
+.md-sidenav-left{
+  background: #fff;
+  max-width: 250px;
+}
+.ti-menu{
+  font-size: 28px;
+  color: black;
 }
