--- a/template/login.html
+++ b/template/login.html
@@ -24,7 +24,7 @@
                 </div>
               </md-input-container>
               <div  layout="column">
-                <md-button class="login-btn" ng-click="signIn(email,password)" ng-href='#/dashbord'>Login</md-button>
+                <md-button class="login-btn" ng-click="signIn(email,password)">Login</md-button>
                 <div  layout="row" layout-align="center center" style="padding:30px 30px 0;">
                   <a ng-click="signInWithGoogle()"><img class="ti-login-icon" src="images/google.svg"></a>
                   <a ng-click="signInWithFacebook()"><img class="ti-login-icon" src="images/facebook.svg"></a>
